--- a/pages/tags/tags.css
+++ b/pages/tags/tags.css
@@ -7,8 +7,8 @@
 .add-tag-container {
     position: fixed;
     width: 500px;
-    height: 650px;
-    background-color: var(--custom-purple-color-500);
+    height: auto;
+    border: 4px solid var(--custom-gray-color-300);
     border-radius: 10px;
     padding: 15px;
     box-sizing: border-box;
@@ -18,6 +18,20 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.input-container  {
+    input {
+        background-color: var(--custom-gray-color-100) !important;
+
+        &:focus {
+            border-color: var(--custom-gray-color-500) !important;
+        }
+
+        &::placeholder {
+            color: var(--custom-gray-color-500) !important;
+        }
+    }
 }
 
 .photo-input-container {
@@ -37,27 +51,56 @@
     width: 100%;
     height: 200px;
     cursor: pointer;
-    background-color: var(--custom-purple-color-200);
+    background-color: var(--custom-gray-color-100);
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 128px;
+    color: var(--custom-gray-color-500);
 
     &:hover {
-        color: var(--custom-purple-color-25);
+        color: white;
     }
+}
+
+.added-photo-container {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+    border: solid 2px var(--custom-gray-color-500);
 }
 
 .tag-cover-display {
     width: 100%;
     height: 200px;
     border-radius: 10px;
-    border: solid 2px var(--custom-purple-color-25);
+    visibility: hidden;
 }
 
 .photo-input {
     height: 0;
     width: 0;
     visibility: hidden;
+}
+
+.submit-button {
+    &:enabled {
+        color: var(--custom-black-color-100) !important;
+        background-color: white;
+    }
+
+    &:disabled {
+        background-color: var(--custom-gray-color-500) !important;
+    }
+}
+
+.buttons-container {
+    display: flex;
+    gap: 1rem;
+}
+
+h1 {
+    text-align: center;
 }
