--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -1,5 +1,5 @@
 .left-column {
-    width: 25%;
+    width: 20%;
     height: 100%;
     border-right: 2px solid var(--custom-gray-color-300);
     display: flex;
@@ -7,23 +7,71 @@
 }
 
 .right-column {
-    width: 25%;
+    width: 20%;
     height: 100%;
-    border-left: 2px solid var(--custom-gray-color-300)
+    padding: 0 10px;
+    border-left: 2px solid var(--custom-gray-color-300);
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .dashboard-container {
-    width: 50%;
+    width: 60%;
     height: 100%;
+}
 
-    header {
-        width: 100%;
-        height: 75px;
-        display: flex;
-        flex-direction: row;
-        box-sizing: border-box;
-        padding: 0 20px;
-        border-bottom: 2px solid var(--custom-gray-color-300);
-        align-items: center;
+.dashboard-header {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    border-bottom: 2px solid var(--custom-gray-color-300);
+    align-items: center;
+}
+
+.header-button {
+    width: auto;
+    height: 100%;
+    padding: 0 20px;
+    align-items: center;
+    background-color: transparent;
+    color: var(--custom-gray-color-500);
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--custom-gray-color-300);
+    }
+}
+
+.header-options-button {
+    margin-left: auto;
+    width: auto;
+    height: 100%;
+    padding: 0 20px;
+    align-items: center;
+    color: var(--custom-gray-color-500);
+    font-size: 20px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.create-post-button {
+    width: 225px;
+    height: 50px;
+    background: var(--custom-pink-color-200);
+    border-radius: 15px;
+    align-self: center;
+    margin-top: auto;
+    cursor: pointer;
+    font-size: 24px;
+
+    &:hover {
+        background-color: var(--custom-pink-color-100);
     }
 }
