--- a/pages/start/start.css
+++ b/pages/start/start.css
@@ -46,6 +46,53 @@
     gap: 2rem;
 }
 
+.main-tags-container {
+    height: calc(100% - 75px);
+    display: grid;
+    padding: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 12px;
+    overflow-y: auto;
+}
+
+.main-tags-container .main-tag-card:nth-child(14n+3),
+.main-tags-container .main-tag-card:nth-child(14n+6) {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.main-tag-card {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 300px;
+    border-radius: 10px;
+    border: solid 2px var(--custom-gray-color-400);
+    box-sizing: border-box;
+
+    img {
+        width: 100%;
+        min-height: calc(100% - 50px);
+        object-fit: cover;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+        margin: 0;
+    }
+
+    p {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+        min-height: 50px;
+        background-color: var(--custom-gray-color-400);
+        font-weight: bold;
+        text-transform: uppercase;
+        border-bottom-right-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+}
+
 h2 {
     font-size: 18px;
 }
