--- a/pages/tags/tags-form.css
+++ b/pages/tags/tags-form.css
@@ -6,7 +6,7 @@
 
 .add-tag-container {
     position: fixed;
-    width: 500px;
+    width: 575px;
     height: auto;
     border: 4px solid var(--custom-gray-color-300);
     border-radius: 10px;
@@ -31,6 +31,46 @@
         &::placeholder {
             color: var(--custom-gray-color-500) !important;
         }
+    }
+}
+
+.tag-category-container {
+    height: 50px;
+    padding-left: 6px;
+    padding-right: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.checkbox-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+
+    input[type="checkbox"] {
+        height: 25px;
+        width: 25px;
+        accent-color: var(--custom-gray-color-500);
+    }
+}
+
+.select-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    select {
+        width: 200px;
+        height: 35px;
+        background-color: transparent;
+        border: 2px solid var(--custom-gray-color-500);
+        border-radius: 5px;
+        color: white;
+        font-weight: bold;
+        text-transform: uppercase;
     }
 }
 
@@ -67,15 +107,15 @@
 .added-photo-container {
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 400px;
     border-radius: 10px;
     border: solid 2px var(--custom-gray-color-500);
 }
 
 .tag-cover-display {
     width: 100%;
-    height: 200px;
-    border-radius: 10px;
+    height: 400px;
+    border-radius: 8px;
     visibility: hidden;
 }
 
