--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -75,3 +75,217 @@
         background-color: var(--custom-pink-color-100);
     }
 }
+
+.modal-content {
+    padding: 0 !important;
+    background-color: var(--custom-gray-color-600) !important;
+}
+
+.post-options-container {
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    gap: 2rem;
+}
+
+.post-option-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.15s ease-in-out;
+
+    &:hover {
+        transform: scale(1.15);
+        cursor: pointer;
+    }
+
+    &:hover .post-option-text {
+        transform: scale(1.1);
+    }
+
+    &:hover .post-option-icon-container i {
+        animation: shake 1.2s ease infinite;
+    }
+}
+
+.post-option-icon-container {
+    display: flex;
+    width: 125px;
+    height: 125px;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+    color: var(--custom-black-color-100);
+    font-size: 60px;
+    transition: transform 0.3s ease-in-out;
+
+    i {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.post-option-text {
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase
+}
+
+.add-post-modal-header {
+    height: 65px;
+    width: 100%;
+    border-bottom: 2px solid var(--custom-gray-color-400);
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.add-post-modal-main {
+    height: 350px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.text-post-title-input {
+    height: 50px;
+    width: 100%;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: var(--custom-white-color-100);
+    font-size: 24px;
+}
+.text-post-content-input {
+    height: 150px;
+    width: 100%;
+    border: none;
+    background: transparent;
+    outline: none;
+    color: var(--custom-white-color-100);
+    resize: none;
+    font-size: 16px;
+    font-family: "Montserrat", serif;
+}
+
+.add-tag-container {
+    height: 65px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 6px;
+
+    label {
+        margin-left: 3px;
+        color: var(--custom-gray-color-500);
+    }
+}
+
+.add-tags-options-container {
+    display: flex;
+    width: 100%;
+    gap: 1rem;
+}
+
+.tag-input {
+    width: 125px;
+    height: 40px;
+    padding: 0 10px;
+    background: var(--custom-gray-color-400);
+    border: none;
+    color: white;
+    outline: none;
+    border-radius: 50px;
+    font-weight: bold;
+}
+
+.tag-select {
+    min-height: 40px;
+    max-height: 100px;
+    width: 150px;
+    overflow-y: auto;
+    border: 1px solid var(--custom-gray-color-300);
+    border-radius: 5px;
+    background: var(--custom-gray-color-400);
+    color: white;
+    font-weight: bold;
+    outline: none;
+    text-transform: uppercase;
+    font-family: "Montserrat", serif;
+}
+
+.chosen-tags-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    width: 100%;
+    height: 100px;
+    padding: 5px 0;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.tag-card {
+    width: auto;
+    height: 35px;
+    padding: 0 20px;
+    border-radius: 50px;
+    align-items: center;
+    gap: 4px;
+    display: flex;
+    background: var(--custom-gray-color-400);
+    color: var(--custom-gray-color-500);
+
+    i {
+        font-size: 25px;
+    }
+
+    i:hover {
+        color: var(--custom-white-color-100);
+        cursor: pointer;
+    }
+}
+
+.add-post-modal-footer {
+    display: flex;
+    height: 65px;
+    width: 100%;
+    border-top: 2px solid var(--custom-gray-color-400);
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.add-post-button {
+    border: none;
+    width: auto;
+    height: 40px;
+    border-radius: 50px;
+    padding: 0 20px;
+    font-size: 18px;
+    color: var(--custom-gray-color-500);
+    background-color: var(--custom-gray-color-400);
+
+    &:disabled {
+        color: var(--custom-gray-color-700);
+    }
+}
+
+@keyframes shake {
+    0%, 100% {
+        transform:  rotate(0deg);
+    }
+    25% {
+        transform: rotate(-15deg);
+    }
+    50% {
+        transform:  rotate(15deg);
+    }
+    75% {
+        transform:  rotate(-5deg);
+    }
+}
