added ability of adding first type of post also created functions to display posts created by singed in user.

--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
     --custom-gray-color-500: #ACACAC;
     --custom-gray-color-600: #222222;
     --custom-gray-color-700: #7A7A7A;
+    --custom-gray-color-800: #434343;
+    --custom-gray-color-900: #B2B2B2;
 
     --custom-purple-color-25: #E9E1FF;
     --custom-purple-color-50: #D6CBFF;
