--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -268,10 +268,150 @@
     padding: 0 20px;
     font-size: 18px;
     color: var(--custom-gray-color-500);
-    background-color: var(--custom-gray-color-400);
+    background-color: var(--custom-gray-color-800);
+    cursor: pointer;
 
     &:disabled {
-        color: var(--custom-gray-color-700);
+        color: var(--custom-gray-color-700) !important;
+        background-color: var(--custom-gray-color-800) !important;
+        cursor: auto;
+    }
+}
+
+.dashboard-content-container {
+    width: 100%;
+    height: calc(100% - 50px);
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.dashboard-post-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    height: auto;
+    padding: 0 15px;
+    background: var(--custom-gray-color-600);
+    border-radius: 10px;
+    box-sizing: border-box;
+
+    h3 {
+        margin: 0;
+    }
+}
+
+.post-header {
+    height: 65px;
+    width: 100%;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.post-author-image {
+    height: 50px;
+    width: 50px;
+    border-radius: 10%;
+}
+
+.post-data-container {
+    height: 100%;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    justify-content: center;
+    color: var(--custom-gray-color-500);
+
+    p {
+        padding: 0;
+        margin: 0;
+    }
+}
+
+.post-content {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+
+.post-title {
+    font-size: 24px;
+}
+
+.post-text {
+    color: var(--custom-white-color-100);
+    background: transparent;
+    min-height: 50px;
+    height: auto;
+    border: none;
+    resize: none;
+    outline: none;
+    font-size: 16px;
+    overflow-y: hidden;
+    appearance: none;
+    padding: 15px 0;
+    line-height: 30px;
+    font-family: "Montserrat", serif;
+}
+
+.post-tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    color: var(--custom-gray-color-500);
+
+    span:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+}
+
+.post-footer {
+    width: 100%;
+    height: 65px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-top: 2px solid var(--custom-gray-color-800);
+}
+
+.post-likes-container {
+    display: flex;
+    align-items: center;
+    height: 35px;
+    width: auto;
+    padding: 0 10px;
+    border: 2px solid var(--custom-gray-color-800);
+    border-radius: 100px;
+    gap: 6px
+}
+
+.post-likes-amount {
+    color: var(--custom-white-color-100);
+    font-weight: bold;
+}
+
+.post-name-of-likes {
+    color: var(--custom-gray-color-500);
+}
+
+.user-options {
+    display: flex;
+    gap: 1rem;
+    color: var(--custom-gray-color-900);
+    font-size: 28px;
+
+    i:hover {
+        cursor: pointer;
     }
 }
 
