--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@
     --custom-gray-color-700: #7A7A7A;
     --custom-gray-color-800: #434343;
     --custom-gray-color-900: #B2B2B2;
+    --custom-gray-color-1000: #323232;
 
     --custom-purple-color-25: #E9E1FF;
     --custom-purple-color-50: #D6CBFF;
@@ -95,8 +96,11 @@
     width: 100%;
     height: 100%;
     align-content: center;
+    padding: 15px;
+    box-sizing: border-box;
     background-color: rgba(0, 0, 0, 0.6);
     font-family: "Montserrat", serif;
+    overflow-y: auto;
 }
 
 .modal-content {
