--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -143,7 +143,17 @@
 }
 
 .add-post-modal-main {
-    height: 350px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+.add-post-modal-tags-options {
+    min-height: 165px;
+    height: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -160,8 +170,89 @@
     color: var(--custom-white-color-100);
     font-size: 24px;
 }
+
+.add-photo-url-container {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    box-sizing: border-box;
+
+    input {
+        width: 100%;
+        height: 50px;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        background: var(--custom-gray-color-1000);
+        padding: 0 10px;
+        color: var(--custom-white-color-100);
+        box-sizing: border-box;
+    }
+
+    label {
+        margin-left: 2px;
+    }
+}
+
+.added-links-list {
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    gap: 1rem;
+
+    li {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.image-item-container {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 15px;
+    }
+
+    i {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        border-radius: 100px;
+        border: 2px solid var(--custom-black-color-100);
+        background-color: var(--custom-gray-color-700);
+        text-align: center;
+        width: 40px;
+        height: 40px;
+        font-size: 35px;
+        color: var(--custom-black-color-100);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    i:hover {
+        background-color: var(--custom-red-color-300);
+        color: var(--custom-white-color-100);
+        cursor: pointer;
+    }
+}
+
 .text-post-content-input {
-    height: 150px;
+    min-height: 150px;
     width: 100%;
     border: none;
     background: transparent;
@@ -359,6 +450,21 @@
     padding: 15px 0;
     line-height: 30px;
     font-family: "Montserrat", serif;
+}
+
+.post-images-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    gap: 1rem;
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        border-radius: 15px;
+    }
 }
 
 .post-tags {
