--- a/index.css
+++ b/index.css
@@ -80,6 +80,13 @@
     100% { opacity: 0; transform: translateY(-20px); }
 }
 
+.left-column {
+    height: 100%;
+    border-right: 2px solid var(--custom-gray-color-300);
+    display: flex;
+    justify-content: right;
+}
+
 .main-container {
     width: 100%;
     height: 98vh;
