--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -1,9 +1,5 @@
 .left-column {
     width: 20%;
-    height: 100%;
-    border-right: 2px solid var(--custom-gray-color-300);
-    display: flex;
-    justify-content: right;
 }
 
 .right-column {
@@ -212,6 +208,29 @@
     }
 }
 
+.post-item-delete-icon {
+    position: absolute;
+    border-radius: 100px;
+    border: 2px solid var(--custom-black-color-100);
+    background-color: var(--custom-gray-color-700);
+    text-align: center;
+    width: 40px;
+    height: 40px;
+    font-size: 35px;
+    color: var(--custom-black-color-100);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+
+    &:hover {
+        background-color: var(--custom-red-color-300);
+        color: var(--custom-white-color-100);
+        cursor: pointer;
+    }
+
+}
+
 .image-item-container {
     width: 100%;
     height: auto;
@@ -227,27 +246,23 @@
         border-radius: 15px;
     }
 
-    i {
-        position: absolute;
+    .post-item-delete-icon {
         top: 15px;
         right: 15px;
-        border-radius: 100px;
-        border: 2px solid var(--custom-black-color-100);
-        background-color: var(--custom-gray-color-700);
-        text-align: center;
-        width: 40px;
-        height: 40px;
-        font-size: 35px;
-        color: var(--custom-black-color-100);
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
+}
 
-    i:hover {
-        background-color: var(--custom-red-color-300);
-        color: var(--custom-white-color-100);
-        cursor: pointer;
+.link-item-container {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .post-item-delete-icon {
+        top: 15px;
+        right: 15px;
     }
 }
 
@@ -260,6 +275,57 @@
     color: var(--custom-white-color-100);
     resize: none;
     font-size: 16px;
+    font-family: "Montserrat", serif;
+}
+
+.post-quote-textarea {
+    width: 100%;
+    height: auto;
+    border: none;
+    background: transparent;
+    outline: none;
+    color: var(--custom-white-color-100);
+    resize: none;
+    font-size: 20px;
+    font-family: "Montserrat", serif;
+    padding: 20px 0;
+    box-sizing: border-box;
+}
+
+.site-preview {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border: 2px solid var(--custom-gray-color-700);
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        border-top-right-radius: 15px;
+        border-top-left-radius: 15px;
+        border-bottom: 2px solid var(--custom-gray-color-700);
+    }
+
+    a {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: transparent;
+    }
+
+    .post-item-delete-icon {
+        top: 15px;
+        right: 15px;
+    }
+}
+
+.site-preview-info {
+    padding: 10px;
+    box-sizing: border-box;
     font-family: "Montserrat", serif;
 }
 
@@ -282,31 +348,86 @@
     gap: 1rem;
 }
 
-.tag-input {
-    width: 125px;
-    height: 40px;
-    padding: 0 10px;
-    background: var(--custom-gray-color-400);
-    border: none;
-    color: white;
-    outline: none;
-    border-radius: 50px;
-    font-weight: bold;
+.select-search-box-container {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    position: relative;
+    font-family: "Montserrat", serif;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
-.tag-select {
-    min-height: 40px;
-    max-height: 100px;
-    width: 150px;
-    overflow-y: auto;
+.select-label-container {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
     border: 1px solid var(--custom-gray-color-300);
     border-radius: 5px;
     background: var(--custom-gray-color-400);
-    color: white;
+    color: var(--custom-white-color-100);
+
+    i {
+        font-size: 20px;
+    }
+}
+
+.select-options-container {
+    display: none;
+    position: absolute;
+    padding: 10px 10px;
+    border-radius: 5px;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 55px;
+    background: var(--custom-gray-color-400);
+    box-sizing: border-box;
+
+    input {
+        width: 100%;
+        height: 40px;
+        border: 2px solid var(--custom-gray-color-500);
+        background: transparent;
+        border-radius: 5px;
+        padding: 0 10px;
+        box-sizing: border-box;
+        font-size: 15px;
+        color: var(--custom-white-color-100);
+        outline: none;
+        font-family: "Montserrat", serif;
+        margin-bottom: 10px;
+    }
+}
+
+.options-list-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.select-option {
+    display: flex;
+    height: 35px;
+    align-items: center;
+    color: var(--custom-white-color-100);
     font-weight: bold;
-    outline: none;
-    text-transform: uppercase;
-    font-family: "Montserrat", serif;
+    border-radius: 5px;
+
+    &:hover {
+        cursor: pointer;
+        background: var(--custom-gray-color-800);
+    }
+
+    input {
+        display: none;
+    }
 }
 
 .chosen-tags-container {
@@ -465,6 +586,16 @@
         object-fit: cover;
         border-radius: 15px;
     }
+}
+
+.post-links-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    gap: 1rem;
+    padding: 0;
+    margin: 0;
 }
 
 .post-tags {
