--- a/pages/dashboard/dashboard.css
+++ b/pages/dashboard/dashboard.css
@@ -38,6 +38,7 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-bottom: 1px solid transparent;
 
     &:hover {
         background-color: var(--custom-gray-color-300);
@@ -649,6 +650,10 @@
 
     i:hover {
         cursor: pointer;
+    }
+
+    .liked {
+        color: var(--custom-red-color-200);
     }
 }
 
