--- a/CLIENT/pages/dashboard/dashboard.css
+++ b/CLIENT/pages/dashboard/dashboard.css
@@ -43,6 +43,11 @@
     &:hover {
         background-color: var(--custom-gray-color-300);
     }
+
+    &.active {
+        color:  #FFFFFF ;
+        border-bottom-color: #FF8A80;
+    }
 }
 
 .header-options-button {
@@ -669,5 +674,182 @@
     }
     75% {
         transform:  rotate(-5deg);
+    }
+}
+
+.no-posts-info {
+    background: var(--custom-gray-color-300);
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Montserrat", serif;
+}
+
+.followed-tags-container {
+    border-bottom: 2px solid var(--custom-gray-color-600);
+}
+
+.followed-tags-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: transparent;
+    width: 100%;
+    height: 50px;
+    font-family: "Montserrat", serif;
+
+    h2 {
+        font-weight: normal;
+    }
+
+    button {
+        border: none;
+        width: auto;
+        height: 100%;
+        color: var(--custom-pink-color-200);
+        background: transparent;
+        font-size: 18px;
+        font-weight: normal;
+        cursor: pointer;
+    }
+}
+
+.followed-tags-modal-content-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.followed-tags-modal-header {
+    width: 100%;
+    height: 65px;
+    border-bottom: 2px solid var(--custom-gray-color-400);
+    box-sizing: border-box;
+
+    header {
+        height: 100%;
+        width: 100%;
+        padding: 0 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-sizing: border-box;
+        font-family: "Montserrat", serif;
+
+        label {
+            font-size: 20px;
+        }
+
+        i {
+            color: var(--custom-gray-color-500);
+            font-size: 28px;
+        }
+    }
+}
+
+.followed-tags-modal-searchbar {
+    width: 95%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    border: 1px solid var(--custom-gray-color-700);
+    padding: 0 10px;
+    box-sizing: border-box;
+    align-items: center;
+    border-radius: 5px;
+    font-family: "Montserrat", serif;
+
+    input {
+        border: none;
+        background: none;
+        width: 85%;
+        height: 100%;
+        outline: none;
+        font-weight: bold;
+        color: white;
+        font-size: 15px;
+    }
+
+    .search-icon {
+        font-size: 22px;
+        margin-right: 10px;
+    }
+
+    .reset-searchbar {
+        visibility: hidden;
+        font-size: 32px;
+        margin-left: 10px;
+        cursor: pointer;
+    }
+}
+
+.followed-tags-modal-list {
+    border-top: 2px solid white;
+    padding: 10px;
+    width: 100%;
+    min-height: 400px;
+    max-height: 400px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+.followed-tags-modal-list-element {
+    width: 100%;
+    min-height: 70px !important;
+    padding: 0 10px;
+    box-sizing: border-box;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.followed-tags-list-element-buttons-container {
+    display: flex;
+    gap: 4px;
+}
+
+.go-to-tag-button {
+    width: fit-content;
+    height: 40px;
+    border-radius: 100px;
+    padding: 0 25px;
+    background-color: var(--custom-pink-color-200);
+    color: #0D0D0D;
+    box-sizing: border-box;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+}
+
+.follow-option-button {
+    width: fit-content;
+    height: 40px;
+    border-radius: 100px;
+    padding: 0 25px;
+    box-sizing: border-box;
+    font-size: 16px;
+    cursor: pointer;
+
+    &.follow {
+        border: none;
+        background-color: var(--custom-pink-color-200);
+        color: #0D0D0D;
+    }
+
+    &.unfollow {
+        border: 2px solid var(--custom-gray-color-500);
+        color: var(--custom-gray-color-500);
+        background: transparent;
     }
 }
