--- a/CLIENT/pages/dashboard/dashboard.css
+++ b/CLIENT/pages/dashboard/dashboard.css
@@ -625,6 +625,13 @@
     align-items: center;
 
     border-top: 2px solid var(--custom-gray-color-800);
+
+    i.bi-heart-fill {
+        padding-top: 2px !important;
+    }
+    i.bi-heart {
+        padding-top: 2px !important;
+    }
 }
 
 .post-likes-container {
@@ -659,6 +666,207 @@
 
     .liked {
         color: var(--custom-red-color-200);
+    }
+}
+
+.post-comments-likes-container {
+    flex-direction: column;
+    width: 100%;
+    display: flex;
+    background: var(--custom-gray-color-600);
+    border-top: 2px solid var(--custom-gray-color-800);
+    transition: all;
+    max-height: 500px;
+
+    &.hidden {
+        max-height: 0;
+        opacity: 0;
+        transition: 0.3s ease;
+        z-index: -10;
+    }
+
+    &.visible {
+        min-height: 500px;
+        transition: 0.3s ease;
+        z-index: 10;
+    }
+}
+
+.statistics-info-container {
+    display: flex;
+    gap: 1rem;
+    height: 65px;
+    align-items: center;
+    flex: 0 0 auto;
+}
+
+.statistic-container {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-weight: bold;
+    color: var(--custom-gray-color-900);
+    min-height: 40px;
+    border-radius: 100px;
+    padding: 5px 20px;
+    box-sizing: border-box;
+
+    i {
+        display: flex !important;
+        align-items: center !important;
+        justify-content: center !important;
+        font-size: 24px;
+    }
+
+    span {
+        font-size: 18px;
+    }
+
+    &.active {
+        color: var(--custom-black-color-100);
+        background: var(--custom-pink-color-200);
+    }
+}
+
+.add-comment-container {
+    display: flex;
+    flex: 0 0 auto;
+    gap: 1rem;
+    border-top: 2px solid var(--custom-gray-color-800);
+    width: 100%;
+    align-items: center;
+    min-height: 75px;
+
+    img {
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+    }
+}
+
+.comment-input {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 45px;
+    background: var(--custom-gray-color-400);
+    border-radius: 10px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    color: var(--custom-gray-color-700);
+
+    input {
+        width: 90%;
+        height: 100%;
+        outline: none;
+        border: none;
+        background: none;
+        font-size: 16px;
+        font-family: "Montserrat", serif;
+        color: white;
+    }
+}
+
+.add-comment-button {
+    border: none;
+    width: auto;
+    height: auto;
+    background: none;
+    font-size: 24px;
+    color: var(--custom-gray-color-700);
+
+    &.available {
+        color: var(--custom-pink-color-200);
+    }
+}
+
+
+.all-comments-likes-container {
+    display: flex;
+    flex-direction: column;
+    border-top: 2px solid var(--custom-gray-color-800);
+    padding: 10px 0;
+    box-sizing: border-box;
+    overflow-y: auto;
+    max-height: 355px;
+    min-height: 355px;
+
+}
+
+.comment-card {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 1rem;
+    padding: 10px 0;
+    box-sizing: border-box;
+}
+
+.comment-user-image {
+    height: 100%;
+
+    img {
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+    }
+}
+
+.comment-data {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.comment-user-nickname-and-date {
+    display: flex;
+    gap: 6px;
+    align-items: center;
+
+    p {
+        margin: 0;
+        padding: 0;
+    }
+
+    .comment-nickname {
+        font-weight: bold;
+        color: white;
+    }
+
+    .comment-date {
+        color: var(--custom-gray-color-500);
+    }
+}
+
+.comment-settings {
+    display: flex;
+    width: fit-content;
+    height: 100%;
+    color: var(--custom-gray-color-700);
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.like-card {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    padding: 10px 0;
+    box-sizing: border-box;
+    gap: 1rem;
+    align-items: center;
+
+    img {
+        width: 40px;
+        height: 40px;
+        border-radius: 100px;
+    }
+
+    p {
+        font-weight: bold;
+        color: white;
     }
 }
 
