--- a/index.css
+++ b/index.css
@@ -97,7 +97,7 @@
 .modal-container {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     left: 0;
     top: 0;
     width: 100%;
@@ -234,7 +234,8 @@
 }
 
 .searchbar {
-    width: 250px;
+    max-width: 250px;
+    min-width: 200px;
     height: 45px;
     display: flex;
     gap: 1rem;
