--- a/CLIENT/pages/start/start.css
+++ b/CLIENT/pages/start/start.css
@@ -172,3 +172,45 @@
     gap: 1rem;
 }
 
+.forgot-password {
+    place-self: center;
+    margin-top: 4px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.modal-title-with-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: auto;
+    width: 100%;
+}
+
+.return-button {
+    height: 40px;
+    width: 40px;
+    background: transparent;
+    border: none;
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 26px;
+
+    i {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: var(--custom-white-color-100);
+    }
+
+    &:hover {
+        background-color: var(--custom-purple-color-200);
+        cursor: pointer;
+    }
+}
