--- a/CLIENT/pages/reset-password/resetPassword.css
+++ b/CLIENT/pages/reset-password/resetPassword.css
@@ -2,24 +2,85 @@
     position: relative;
     justify-content: center;
     align-items: center;
+
+    &.visible {
+        display: flex;
+    }
+
+    &.hidden {
+        display: none;
+    }
 }
 
 .reset-password-container {
+    display: flex;
     width: 550px;
-    height: 425px;
+    height: 375px;
     border-radius: 10px;
     background-color: var(--custom-purple-color-400);
     font-family: "Montserrat", sans-serif;
+    border: solid 2px white;
     padding: 10px;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    gap: 1rem;
+}
+
+.resend-email-container {
     display: flex;
+    width: 550px;
+    height: 225px;
+    border-radius: 10px;
+    background-color: var(--custom-purple-color-400);
+    font-family: "Montserrat", sans-serif;
+    border: solid 2px var(--custom-white-color-100);
+    padding: 10px;
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
     gap: 1rem;
 
-    h3 {
-        font-size: 36px;
+    p {
+        background-color: var(--custom-purple-color-200);
+        margin: 0;
+        padding: 25px 15px;
+        box-sizing: border-box;
+        font-size: 20px;
+        border-radius: 10px;
+        text-align: justify;
     }
+}
+
+.information-container {
+    width: 550px;
+    height: 225px;
+    border-radius: 10px;
+    background-color: var(--custom-purple-color-400);
+    font-family: "Montserrat", sans-serif;
+    border: solid 2px var(--custom-white-color-100);
+    display: flex;
+    flex-direction: column;
+    padding: 20px 10px;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-between;
+
+
+    p {
+        background-color: var(--custom-purple-color-200);
+        margin: 0;
+        padding: 25px 15px;
+        box-sizing: border-box;
+        font-size: 20px;
+        border-radius: 10px;
+        text-align: justify;
+    }
+}
+
+.modal-title {
+    font-size: 42px;
+    margin: 0;
 }
 
 .input-container {
@@ -30,6 +91,46 @@
     }
 }
 
+.buttons-container {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
 .submit-button {
     margin-top: 2rem;
+}
+
+.cancel-button {
+    padding: 10px 20px;
+    background-color: var(--custom-purple-color-200);
+    border: 2px solid var(--custom-white-color-100);
+    color: var(--custom-white-color-100);
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.try-again-button {
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+
+    &:disabled {
+        background-color: var(--custom-purple-color-200);
+        border: none;
+        cursor: auto;
+    }
+
+    &:enabled {
+        border: 2px solid var(--custom-white-color-100);
+        background-color: var(--custom-white-color-100);
+        color: var(--custom-purple-color-600);
+    }
 }
