Added ability of follow or unfollow tag in the main page, also user has ability of manage their tags from main page. Also in the discover page, fetched tags has information about followers amount and latest posts amount. Fixed some errors related with fetching random tags suggestions for user and improved styling in some places.

--- a/CLIENT/pages/account/account.css
+++ b/CLIENT/pages/account/account.css
@@ -320,7 +320,7 @@
 }
 
 .submit-update-button {
-    background: var(--custom-pink-color-200);
+    background: var(--custom-purple-color-400);
     border:  2px solid var(--custom-white-color-100);
 }
 
@@ -379,7 +379,7 @@
     }
 
     button.submit {
-        background: var(--custom-pink-color-200);
+        background: var(--custom-purple-color-400);
         border: 2px solid var(--custom-white-color-100);
         color: var(--custom-white-color-100);
     }
