--- a/CLIENT/pages/dashboard/dashboard.css
+++ b/CLIENT/pages/dashboard/dashboard.css
@@ -167,9 +167,18 @@
 .add-post-modal-header {
     height: 65px;
     width: 100%;
+    display: flex;
     border-bottom: 2px solid var(--custom-gray-color-400);
     padding: 0 10px;
     box-sizing: border-box;
+    align-items: center;
+    gap: 1rem;
+
+    img {
+        height: 50px;
+        width: 50px;
+        border-radius: 10px;
+    }
 }
 
 .add-post-modal-main {
@@ -469,8 +478,8 @@
     flex-wrap: wrap;
     gap: 4px;
     width: 100%;
-    height: 100px;
-    padding: 5px 0;
+    height: 150px;
+    padding: 15px 0;
     box-sizing: border-box;
     overflow-y: auto;
 }
@@ -895,19 +904,99 @@
     background: var(--custom-purple-color-400);
 }
 
-.random-tags-container {
+.chosen-tag-data-container {
     display: flex;
-    flex-direction: column;
-    margin-top: 2rem;
+    background: var(--custom-gray-color-200);
+    border-radius: 5px;
+    padding: 5px;
     box-sizing: border-box;
     gap: 1rem;
 
+    &.hidden {
+        display: none;
+    }
+
+    &.visible {
+        display: flex;
+    }
+}
+
+.user-followed-tags-container {
+    display: flex;
+    flex-direction: column;
+    background: var(--custom-gray-color-200);
+    border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    gap: 1rem;
+
+    header {
+        border-bottom: 1px solid var(--custom-gray-color-800);
+        padding: 20px 10px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    button {
+        color: var(--custom-purple-color-400);
+        border: none;
+        background: none;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        text-decoration: underline;
+    }
+
     h2 {
         font-size: 18px;
+        margin: 0;
+    }
+
+    &.hidden {
+        display: none;
+    }
+
+    &.visible {
+        display: flex;
+    }
+}
+
+.random-tags-container {
+    display: flex;
+    flex-direction: column;
+    background: var(--custom-gray-color-200);
+    border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box;
+    gap: 1rem;
+
+    header {
+        border-bottom: 1px solid var(--custom-gray-color-800);
+        padding: 20px 0;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+    }
+
+    footer {
+        border-top: 1px solid var(--custom-gray-color-800);
+        padding: 20px 0;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+    }
+
+    h2 {
+        font-size: 18px;
+        margin: 0;
     }
 
     a {
         text-decoration: none;
+        font-size: 18px;
         color: var(--custom-purple-color-400);
         cursor: pointer;
     }
@@ -918,9 +1007,16 @@
 }
 
 .random-post-container {
-
     h2 {
         font-size: 18px;
+    }
+
+    &.hidden {
+        display: none;
+    }
+
+    &.visible {
+        display: block;
     }
 }
 
@@ -1002,7 +1098,7 @@
         height: 100%;
         position: absolute;
         text-decoration: none;
-        z-index: 2;
+        z-index: 5;
     }
 
     .smoke-effect {
@@ -1046,4 +1142,88 @@
     justify-content: end;
     align-items: center;
     z-index: 3;
+}
+
+.user-followed-tags-list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 200px;
+    overflow-y: auto;
+}
+
+.user-followed-tag-with-additional-info {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    padding: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+
+    &:hover {
+        background-color: var(--custom-gray-color-300)
+    }
+}
+
+.followed-tag-link {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+
+    a {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        cursor: pointer;
+        gap: 4px;
+    }
+}
+
+.tag-name {
+    font-size: 18px;
+    color: var(--custom-white-color-100);
+}
+
+.tag-latest-posts {
+    font-size: 16px;
+    color: var(--custom-gray-color-800);
+}
+
+.chosen-tag-card {
+    width: 100%;
+    height: auto;
+    padding: 5px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    h2 {
+        margin: 0;
+        padding: 0;
+        font-size: 20px;
+    }
+
+    button {
+        border: 2px solid var(--custom-purple-color-400);
+        width: 100%;
+        height: 50px;
+        border-radius: 5px;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    button.follow {
+        background: var(--custom-purple-color-400);
+        color: black;
+    }
+
+    button.unfollow {
+        background: transparent;
+        color: var(--custom-purple-color-400);
+    }
 }
