--- a/CLIENT/pages/reset-password/resetPassword.css
+++ b/CLIENT/pages/reset-password/resetPassword.css
@@ -121,6 +121,7 @@
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
     font-weight: bold;
+    transition: all ease-in-out 0.3s;
 
     &:disabled {
         background-color: var(--custom-purple-color-200);
