--- a/CLIENT/pages/start/start.css
+++ b/CLIENT/pages/start/start.css
@@ -125,6 +125,7 @@
     color: var(--custom-gray-color-500);
     cursor: pointer;
     border-radius: 100px;
+    transition: all ease-in-out 0.3s;
 
     i {
         font-size: 28px;
@@ -201,6 +202,7 @@
     top: 10px;
     left: 10px;
     font-size: 26px;
+    transition: all ease-in-out 0.3s;
 
     i {
         display: flex;
