--- a/index.css
+++ b/index.css
@@ -160,6 +160,7 @@
         color: var(--custom-white-color-100);
         font-size: 16px;
         box-sizing: border-box;
+        transition: all ease-in-out 0.3s;
 
         &:focus {
             border-color: var(--custom-purple-color-25);
@@ -192,6 +193,7 @@
         cursor: pointer;
         color: var(--custom-gray-color-500);
         box-sizing: border-box;
+        transition: all ease-in-out 0.3s;
 
         a {
             display: flex;
@@ -220,6 +222,7 @@
     font-weight: bold;
     font-size: 20px;
     cursor: pointer;
+    transition: all ease-in-out 0.3s;
 
     &:disabled {
         background-color: var(--custom-purple-color-200);
@@ -262,6 +265,7 @@
     padding: 0 10px;
     align-items: center;
     position: relative;
+    transition: all ease-in-out 0.3s;
 
     i {
         font-size: 20px;
@@ -294,6 +298,7 @@
     border-radius: 10px;
     flex-direction: column;
     overflow-y: auto;
+    transition: all ease-in-out 0.3s;
 
     &.hidden {
         display: none;
@@ -311,6 +316,7 @@
     background: transparent;
     padding: 10px;
     box-sizing: border-box;
+    transition: all ease-in-out 0.3s;
 
     &:hover {
         background-color: var(--custom-gray-color-800);
@@ -396,6 +402,7 @@ h1 {
     cursor: pointer;
     border: none;
     z-index: 10;
+    transition: all ease-in-out 0.3s;
 
     &:hover {
         background: var(--custom-gray-color-800);
@@ -414,6 +421,7 @@ h1 {
         align-items: center;
         justify-content: center;
         margin-right: 2px;
+        transition: all ease-in-out 0.3s;
     }
 }
 
@@ -454,6 +462,7 @@ h1 {
     }
 
     button:hover {
+        transition: all ease-in-out 0.3s;
         background: var(--custom-gray-color-1000);
     }
 }
@@ -491,6 +500,7 @@ h1 {
     font-weight: bold;
     font-size: 16px;
     text-align: center;
+    transition: all ease-in-out 0.3s;
 
     &.warning {
         color: var(--custom-red-color-300);
@@ -596,7 +606,6 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     border-top: 2px solid var(--custom-gray-color-800);
 
     i.bi-heart-fill {
@@ -632,8 +641,10 @@ h1 {
     gap: 1rem;
     color: var(--custom-gray-color-900);
     font-size: 28px;
+    transition: all ease-in-out 0.3s;
 
     i:hover {
+        transition: all ease-in-out 0.3s;
         cursor: pointer;
     }
 
@@ -739,6 +750,7 @@ h1 {
     border-radius: 100px;
     padding: 5px 20px;
     box-sizing: border-box;
+    transition: all ease-in-out 0.3s;
 
     i {
         display: flex !important;
@@ -788,6 +800,7 @@ h1 {
     background: none;
     font-size: 24px;
     color: var(--custom-gray-color-700);
+    transition: all ease-in-out 0.3s;
 
     &.available {
         color: var(--custom-purple-color-400);
@@ -876,6 +889,7 @@ h1 {
     background: transparent;
     box-sizing: border-box;
     cursor: pointer;
+    transition: all ease-in-out 0.3s;
 
     i {
         display: flex;
@@ -1022,4 +1036,41 @@ h1 {
     &.visible {
         display: flex;
     }
+}
+
+.site-preview {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    border: 2px solid var(--custom-gray-color-700);
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        border-top-right-radius: 15px;
+        border-top-left-radius: 15px;
+        border-bottom: 2px solid var(--custom-gray-color-700);
+    }
+
+    a {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background: transparent;
+    }
+
+    .post-item-delete-icon {
+        top: 15px;
+        right: 15px;
+    }
+}
+
+.site-preview-info {
+    padding: 10px;
+    box-sizing: border-box;
+    font-family: "Montserrat", serif;
 }
