--- a/CLIENT/pages/account/account.css
+++ b/CLIENT/pages/account/account.css
@@ -122,10 +122,14 @@
     i {
         grid-column: 4;
         display: flex;
+        height: 35px;
+        width: 35px;
         font-size: 20px;
         justify-content: right;
+        align-items: center;
         color: var(--custom-gray-color-800);
         transition: all ease-in-out 0.3s;
+        margin-left: auto;
 
         &:hover  {
             cursor: pointer;
